--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="card text-white bg-dark mb-3" style="width: 98% !important;">
       <div class="card-header heder text-center">
          <ul>
-            <li class="card-header heder"><a href="" style="text-decoration: none;"> My songs</a></li>
-            <li class="card-header heder"><a href="" style="text-decoration: none;"> My songs</a></li>
+            <li class="card-header heder"><a href="" style="text-decoration: none;"> </a></li>
+            <li class="card-header heder"><a href="" style="text-decoration: none;"> </a></li>
           </ul>
       </div>
       <div class="card-body picha_1">
@@ -135,18 +135,18 @@
    <div class="border  border-dark boda">
        
     <nav id="navbar-example2" class="navbar navbar-light bg-dark px-3">
-      <a class="navbar-brand" href="#" style="color: white;">Navbar</a>
+      <a class="navbar-brand" href="#" style="color: white;"> <h1>kevoo </h1> </a>
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link" href="#scrollspyHeading1">First</a>
+          <a class="nav-link" href="#scrollspyHeading1">status</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#scrollspyHeading2">Second</a>
+          <a class="nav-link" href="#scrollspyHeading2">Exprience</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
           <ul class="dropdown-menu" style="background-color: blac;">
-            <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+            <li><a class="dropdown-item" href="#scrollspyHeading3"> </a> hobby</li>
             <li><hr class="dropdown-divider"></li>
             
           </ul>
