--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">shop</a>
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
+                More
               </a>
               <ul class="dropdown-menu drop" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item personl" href="#">Education</a></li>
+                <li><a class="dropdown-item personl" href="#"> I like</a></li>
                 <li><a class="dropdown-item personl" href="#">Hobby</a></li>
                 <!-- <li><hr class="dropdown-divider personl"></li> -->
                 <li><a class="dropdown-item personl" href="#">Contact</a></li>
