--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
           <option value="Bad">
           <option value="Very Bad">
         </datalist>
+        <br>
+        <button type="submit" id="submit_data_sign">send</button>
       </form>
       </div>
     </div>
